# ai-cookbook

./: .gitignore  GOOGLE_OAUTH_SETUP.md  README.md
client/: README.md  env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
client/app/: globals.css  layout.tsx  page.tsx
client/app/auth/google/callback/: CallbackClient.tsx  page.tsx
client/app/auth/login/: page.tsx
client/app/auth/signup/: page.tsx
client/app/components/: AskAI.tsx  Header.tsx  LoadingProgress.tsx
client/app/contexts/: AuthContext.tsx
client/app/recipes/[id]/: page.tsx
client/types/: zxcvbn.d.ts
server/: .dockerignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-lock.txt  requirements.txt
server/app/: config.py  database.py  dependencies.py  logging_config.py  main.py  models.py  schemas.py
server/app/schemas/: __init__.py  auth.py
server/app/services/: ask_ai.py  audio_download.py  auth.py  google_auth.py  llm.py  recipes.py  stt.py  transcript.py  users.py  video_metadata.py  youtube.py
server/app/tests/: README.md  conftest.py  test_api.py  test_llm.py  test_recipes.py  test_transcript.py  test_youtube.py
shared/: .gitkeep  README.md
shared/config/: constants.ts  index.ts
shared/types/: index.ts  recipe.ts
